--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
     <section class="section-3">
         <div class="container">
             <div class="row">
-                <h2 class="title-2">Why Us</h2>
+                <h2 class="title-2">Why Us?</h2>
                 <p>Mengapa harus pilih Binar Car Rental?</p>
             </div>
-            <div class="row py-3 justify-content-center">
-                <div class="col-lg-3 col-md-6 col-12">
+            <div class="row py-3">
+                <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
                     <div class="card">
                         <div class="card-body">
                             <img src="assets/images/icon_complete.png" alt="asd" class="icon">
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
                     <div class="card">
                         <div class="card-body">
                             <img src="assets/images/icon_price.png" alt="asd" class="icon">
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
                     <div class="card">
                         <div class="card-body">
                             <img src="assets/images/icon_24hrs.png" alt="asd" class="icon">
@@ -200,7 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center">
                     <div class="card">
                         <div class="card-body">
                             <img src="assets/images/icon_professional.png" alt="asd" class="icon">
@@ -209,6 +209,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-4">
+        <div class="container">
+            <div class="row text-center">
+                <h2 class="title-2">Testimonials</h2>
+                <p>Berbagai review positif dari para pelanggan kami</p>
             </div>
         </div>
     </section>
